lib_LTLIBRARIES = libffmpegthumbnailer.la

libffmpegthumbnailer_la_SOURCES =   moviedecoder.h moviedecoder.cpp \
                                    pngwriter.h pngwriter.cpp \
                                    stringoperations.h stringoperations.cpp \
                                    videothumbnailer.cpp

libffmpegthumbnailer_include_HEADERS = videothumbnailer.h

libffmpegthumbnailer_includedir=$(includedir)/ffmpegthumbnailer
