lib_LTLIBRARIES = libffmpegthumbnailer.la

libffmpegthumbnailer_la_SOURCES =   moviedecoder.hpp moviedecoder.cpp \
                                    pngwriter.hpp pngwriter.cpp \
                                    stringoperations.hpp stringoperations.cpp \
                                    videothumbnailer.cpp

libffmpegthumbnailer_include_HEADERS    = videothumbnailer.hpp
libffmpegthumbnailer_includedir         = $(includedir)/libffmpegthumbnailer
libffmpegthumbnailer_la_LDFLAGS         = -version-info 1:0:0
